seleccion de respuesta solo funciona con la primera respuesta

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
             
         </div>
         <div class="question-answers" id="questionsAnswers">
-            
+            <div>
+                <input type="button" value="ENVIAR RESPUESTAS">
+            </div>
         </div>
 
 
